fix(docs): styling on dark mode

--- a/docs/src/sass/index.scss
+++ b/docs/src/sass/index.scss
@@ -54,7 +54,7 @@ div.highlight {
 }
 
 span.highlight {
-    background-color: #eee;
+    background-color: var(--color-background-tertiary);
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
 
     /* fix for long attributes values that don't wrap right */
@@ -206,7 +206,7 @@ figure.highlight {
 
 .section-header__version {
     align-self: flex-end;
-    background-color: var(--color-neutral-200);
+    background-color: var(--color-background-secondary);
     margin-left: auto;
     padding: 2px 4px;
 }
